# skimmer

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  compose.yaml  gunicorn.conf.py  pyproject.toml  run.sh  run_fastapi.sh  run_flask.sh
.github/workflows/: ci.yaml
docker/: Dockerfile  build.sh  compose.yaml  push.sh
env/: .env.test  gunicorn.conf.py
src/skimmer/: __init__.py  api.py  cache.py  config.py  constants.py  core.py  exceptions.py  responses.py  utils.py
src/skimmer/api/: __init__.py
src/skimmer/api/fastapi/: __init__.py  models.py  responses.py
src/skimmer/api/flask/: __init__.py  responses.py
tests/: conftest.py  test_skimmer.py
