[project]
name = "skimmer"
version = "0.1.0"
description = "ROI cropping service"
readme = "README.md"
authors = [
    { name = "Kevin Barnard", email = "kbarnard@mbari.org" }
]
requires-python = ">=3.12"
dependencies = [
    "cachetools>=5.5.1",
    "diskcache>=5.6.3",
    "flask>=3.1.0",
    "pillow>=11.1.0",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[project.scripts]
skimmer = "skimmer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
